# smhasher

./: README.md  build-wasm.sh  prebuild-wasm.sh
src/: CMakeLists.txt  MurmurHash3.cpp  Platform.cpp  main.cpp  wasm.cpp
